# rag-experiments

./: .env-example  .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
notebooks/: 1-ingest-and-index-data.ipynb  2-set-up-rag-pipeline.ipynb  3-evaluate-rag-pipeline.ipynb  4-metadata.ipynb  5-query-expansion.ipynb  testing.ipynb
personas/: ChattyMcChatFace.py  DocSummarizer.py  DrRagilicious.py  MrAndersson.py
