[tool.poetry]
name = "rag-experiments"
version = "0.1.0"
description = ""
authors = ["Tess Ferrandez <tferrand@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
